--- a/java/hw1.html
+++ b/java/hw1.html
@@ -1,4 +1,4 @@
-<!doctype html><!--index.html-->
+<!doctype html><!--hw1_1_1.html-->
 <html><head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
@@ -12,7 +12,7 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <ul><hr/>
 <li> 1주 1회차 </li>
 <ol>
-<li><a href=https://lky020120.github.io/java/haw1_1_1.html>Eclipse 초기 실행(hw1_1_1.html)</a></li>
+<li><a href=https://lky020120.github.io/java/hw1_1_1.html>Eclipse 초기 실행(hw1_1_1.html)</a></li>
 </ol><hr/>
 <li> 1주 2회차 </li>
 <ol>
@@ -20,4 +20,9 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <li><a href="https://lky020120.github.io/java/hw1_2_2.html">변학도실습 desktop용(hw1_2_2.html)</a></li>
 </ol><hr/>
 </ul>
+  <h2>Eclipse 초기 실행 </h2>
+  <h3>소스 코드</h3>
+  <img src="https://lky020120.github.io/java/hw1_1_1_source.jpg"><!-- 소스 코드 캡처 화면 -->
+  <h3>실행 예시</h3>
+  <img src="https://lky020120.github.io/java/hw1_1_1_result.jpg"><!-- 이클립스 결과 캡처 화면 -->
 </body></html>
