--- a/java/hw1_1_1.html
+++ b/java/hw1_1_1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>개인 과제 리스트></title>
+<title><개인 과제 리스트></title>
 </style>
 </head>
 <body>
