--- a/java/hw1_1_1.html
+++ b/java/hw1_1_1.html
@@ -4,10 +4,13 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title><개인 과제 리스트></title>
-</style>
+<style>
+  a:link{color:blue;text-decoration:none;}a:visited{color:purple;text-decoration:none;}
+  a:hover{texte-decoration:underline;}a:active{color:red;text-decoration:none;}
+  </style>
 </head>
 <body>
-<h2><Eclipse 초기 실행></h2>
+<h2>Eclipse 초기 실행</h2>
 <h3>소스 코드</h3>
 <img src="https://lky020120.github.io/java/hw1_1_1_source.jpg"><!-- 소스코드 캡처 화면 -->
 <h3>실행 예시</h3>
