--- a/java/hw1_1_1.html
+++ b/java/hw1_1_1.html
@@ -12,7 +12,7 @@
 <body>
 <h2>Eclipse 초기 실행</h2>
 <h3>소스 코드</h3>
-<img src="https://lky020120.github.io/java/hw1_1_1_source.jpg"><!-- 소스코드 캡처 화면 -->
+<img src="![hw1_1_1_result](https://user-images.githubusercontent.com/89887207/132472955-7fdf2186-0064-45ce-ab65-79e75d25d987.jpg)"><!-- 소스코드 캡처 화면 -->
 <h3>실행 예시</h3>
 <img src="https://lky020120.github.io/java/hw1_1_1_result.jpg"><!-- 이클립스 결과 캡처 화면 -->
 </body>
