--- a/java/hw1.html
+++ b/java/hw1.html
@@ -12,7 +12,7 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <ul><hr/>
 <li> 1주 1회차 </li>
 <ol>
-<li><a href=https://lky020120.github.io/java/haw1_1_1.html>Eclipse 초기 실행(hw1_1_1.html)</a></li>
+<li><a href=https://lky020120.github.io/java/hw1_1_1.html>Eclipse 초기 실행(hw1_1_1.html)</a></li>
 </ol><hr/>
 <li> 1주 2회차 </li>
 <ol>
