--- a/java/hw1_2_1.html
+++ b/java/hw1_2_1.html
@@ -13,7 +13,7 @@
       <ul>
         <li id="week01">1주
           <ol type="1">
-            <li><a href="https://user-images.githubusercontent.com/89887207/132508099-d2df7364-beed-47c2-8349-0c706ebdceef.png" target="_blank">변학도숙제</a></li>
+            <li><a href="https://lky020120.github.io/index0908">변학도숙제</a></li>
           </ol>
       </ul>
     </section>
