--- a/java/hw1_2_1.html
+++ b/java/hw1_2_1.html
@@ -13,7 +13,8 @@
       <ul>
         <li id="week01">1주
           <ol type="1">
-            <li><a href="https://lky020120.github.io/index0908">변학도숙제</a></li>
+            <li><a href="https://lky020120.github.io/1/090801.html">변학도숙제</a></li>
+            <li><a href="https://lky020120.github.io/1/090802.html">도깨비숙제</a></li>
           </ol>
       </ul>
     </section>
