--- a/index0908.html
+++ b/index0908.html
@@ -1,21 +1,18 @@
 <!doctype html><!-- index.html -->
 <html><head>
   <meta charset="utf-8"/><meta name="viewport"content="width=device-width,initial-scale=1"/>
-  <style>
-    a:link{color:blue;text-decoration:none;}a:visited{color:purple;text-decoration:none;}
-    a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
-  </style>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <style>[class*="col-"]{float:left;padding:10px}/*for mobile*/
+    @media only screen and (min-width:768px){ /*For desktop:*/
+      .col-1{width:8.33%;}.col-2{width:16.66%;}.col-3{width:25%;}.col-4{width:33.33%;}
+      .col-5{width:41.66%;}.col-6{width:50%;}.col-7{width:58.33%;}.col-8{width:66.66%;}
+      .col-9{width:75%;}.col-10{width:83.33%;}.col-11{width:91.66%;}.col-12{width:100%;}}</style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery3.1.1/jquery.min.js"></script>
   <title>홍길동 자바 홈페이지</title></head>
   <body><header></header>
     <section>
-      <p>(설명문)아래 코드를 이용하여 주별 숙제를 정리할 것</p>
-      <ul>
-        <li id="week01">1주
-          <ol type="1">
-            <li><a href="https://user-images.githubusercontent.com/89887207/132508099-d2df7364-beed-47c2-8349-0c706ebdceef.png" target="_blank">변학도숙제</a></li>
-          </ol>
-      </ul>
-    </section>
-    <body>
-      </html>
+      <h4>이름</h4><p>소스코드</p>
+      <picture>
+        <social media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/132509128-75f086fe-d7cd-4bea-bc6d-2f97911617c0.png"/>
+        <img src="https://user-images.githubusercontent.com/89887207/132510315-5d627893-3d81-4d60-9c5c-c4fe55cd8af6.png"alt="결과화면"style="width.auto;"/>
+      </picture>
+    </section></body></html>
