--- a/index0908.html
+++ b/index0908.html
@@ -15,4 +15,9 @@
         <social media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/132509128-75f086fe-d7cd-4bea-bc6d-2f97911617c0.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/132510315-5d627893-3d81-4d60-9c5c-c4fe55cd8af6.png"alt="결과화면"style="width.auto;"/>
       </picture>
+      <p>결과화면</p>
+      <picture>
+        <source media="(min=width:768px)"srcset="https://user-images.githubusercontent.com/89887207/132509128-75f086fe-d7cd-4bea-bc6d-2f97911617c0.png"/>
+        <img src="https://user-images.githubusercontent.com/89887207/132510315-5d627893-3d81-4d60-9c5c-c4fe55cd8af6.png"alt="결과화면"style="width.auto;"/>
+      </picture>
     </section></body></html>
