--- a/index1.html
+++ b/index1.html
@@ -13,8 +13,8 @@
       <ul>
         <li id="week01">1주
           <ol type="1">
-            <li><a href="https://lky020120.github.io/1/20xx01x1.html"target="_blank">변학도숙제</a></li>
-            <li><a href="https://lky020120.gtihub.io/1/20xx01x2.html"target="_blank">도깨비숙제</a></li>
+            <li><a href="https://lky020120.github.io/20xx01x1.html"target="_blank">변학도숙제</a></li>
+            <li><a href="https://lky020120.gtihub.io/20xx01x2.html"target="_blank">도깨비숙제</a></li>
           </ol>
       </ul>
     </section>
