--- a/20xx01x1.html
+++ b/20xx01x1.html
@@ -13,11 +13,11 @@
       <h4>이름</h4><p>소스코드</p>
       <picture>
         <social media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/132521132-40c77c60-8378-4462-a9aa-397f865a5f61.png"/>
-        <img src="https://user-images.githubusercontent.com/89887207/132521108-9d7b634c-0a6e-401a-ad19-775eff04fdf7.png"alt="소스코드"style="width.auto;"/>
+        <img src="https://user-images.githubusercontent.com/89887207/132521108-9d7b634c-0a6e-401a-ad19-775eff04fdf7.png"alt="소스코드"style="width:auto;"/>
       </picture>
       <p>결과화면</p>
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/132521132-40c77c60-8378-4462-a9aa-397f865a5f61.png"/>
-        <img src="https://user-images.githubusercontent.com/89887207/132521108-9d7b634c-0a6e-401a-ad19-775eff04fdf7.png"alt="결과화면"style="width.auto;"/>
+        <img src="https://user-images.githubusercontent.com/89887207/132521108-9d7b634c-0a6e-401a-ad19-775eff04fdf7.png"alt="결과화면"style="width:auto;"/>
         </picture>                                                                                                                                                                                                                                                                         
     </section></body></html>
