--- a/20xx01x1.html
+++ b/20xx01x1.html
@@ -12,12 +12,12 @@
     <section>
       <h4>이름</h4><p>소스코드</p>
       <picture>
-        <social media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/132523424-6f0303ce-03c4-49ae-9b71-d20f34060c7a.png"/>
+        <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/132523424-6f0303ce-03c4-49ae-9b71-d20f34060c7a.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/132523259-98758eee-381f-4976-9f94-f96ac34ec94f.png"alt="소스코드"style="width:auto;"/>
       </picture>
       <p>결과화면</p>
       <picture>
-        <social media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/132523259-98758eee-381f-4976-9f94-f96ac34ec94f.png"/>
+        <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/132523259-98758eee-381f-4976-9f94-f96ac34ec94f.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/132523424-6f0303ce-03c4-49ae-9b71-d20f34060c7a.png"alt="결과화면"style="width:auto;"/>
         </picture>                                                                                                                                                                                                                                                                         
     </section></body></html>
