--- a/Dottinjamddak.html
+++ b/Dottinjamddak.html
@@ -15,8 +15,8 @@ a{text-decoration:none;}
 </style>
 <script type="text/javascript">
 function fnTest(){
-document.write("♥두띤이의 잠딱지 페이지에 오신 것을 환영합니다♥")
-alert("♥두띤이의 잠딱지 페이지에 오신 것을 환영합니다♥");
+document.write("♥두띤이의 잠딱지 페이지에 오신 것을 진심으로 환영합니다♥")
+alert("♥두띤이의 잠딱지 페이지에 오신 것을 진심으로 환영합니다♥");
 }
 </script>
 <title>자바 스크립트 실습</title>
@@ -34,6 +34,6 @@ alert("♥두띤이의 잠딱지 페이지에 오신 것을 환영합니다♥")
 <script>fnTest();</script>
 </section>
 <footer>
-<p>&copy; 2021 Made by Gajjong. All rights reserved.</p></footer>
+<p>&copy; 20XX Made by Korea. All rights reserved.</p></footer>
   </body>
 </html>
