--- a/Dottinjamddak.html
+++ b/Dottinjamddak.html
@@ -18,6 +18,20 @@ function fnTest(){
 document.write("♥두띤이의 잠딱지 페이지에 오신 것을 진심으로 환영합니다♥")
 alert("♥두띤이의 잠딱지 페이지에 오신 것을 진심으로 환영합니다♥");
 }
+</script>
+<title>자바 스크립트 실습</title>
+</head>
+<body>
+<header>
+<h2>자바 스크립트를 환영합니다</h2></header>
+<nav>
+<ul>
+<li><a href="http://www.dju.ac.kr">대학</a></li>
+<li><a href="http://hive.dju.ac.kr">실습서버</a></li>
+</ul></nav>
+<section>
+<h2>자바 스크립트 실행합니다</h2>
+<script>fnTest();</script>
 </section>
 <footer>
 <p>&copy; 2021 Made by Gajjong. All rights reserved.</p></footer>
