--- a/Dottinjamddak.html
+++ b/Dottinjamddak.html
@@ -1,4 +1,4 @@
-<!doctype html> <!--   Dottinjamddak.html   -->
+<!doctype html> <!--   index.html   -->
 <html>
 <head>
 <meta http-equiv="Content-Type"content="text/html; charset=utf-8"/>
@@ -15,22 +15,22 @@ a{text-decoration:none;}
 </style>
 <script type="text/javascript">
 function fnTest(){
-document.write("♥두띤이의 잠딱지 페이지에 오신 것을 진심으로 환영합니다♥")
-alert("♥두띤이의 잠딱지 페이지에 오신 것을 진심으로 환영합니다♥");
+document.write("♥두띤이의 잠딱지 페이지에 오신 것을 진심으로 환영합니다♥") 
+  alert("♥두띤이의 잠딱지 페이지에 오신 것을 진심으로 환영합니다♥");
 }
 </script>
-<title>자바 스크립트 실습</title>
+<title>두띤닷컴</title>
 </head>
 <body>
 <header>
-<h2>자바 스크립트를 환영합니다</h2></header>
+<h2>두띤닷컴 입니다.</h2></header>
 <nav>
 <ul>
-<li><a href="http://www.dju.ac.kr">대학</a></li>
-<li><a href="http://hive.dju.ac.kr">실습서버</a></li>
+<li><a href="http://djdunsan-ghs.djsch.kr">두띤이가 재학중인 코로나 감염자 나온 학교</a></li>
+<li><a href="lky020120.github.com/Dottin2">두띤이의 따끈따끈한 사진 모음집</a></li>
 </ul></nav>
 <section>
-<h2>자바 스크립트 실행합니다</h2>
+<h2>많은 광고 부탁드립니다.</h2>
 <script>fnTest();</script>
 </section>
 <footer>
