--- a/java/hw1.html
+++ b/java/hw1.html
@@ -21,20 +21,20 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 </ol><hr/>
 <li> 3주 2회차 </li>
 <ol>
-<li><a href="https://lky020120.github.io/java/hw3_2_1.html">Ex_1 (hw3_2_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw3_2_1.html">Ex1_1 (hw3_2_1.html)</a></li>
 </ol><hr/>
 <li> 3주 3회차 </li>
 <ol>
-<li><a href="https://lky020120.github.io/java/hw3_3_1.html">Ex_2 (hw3_3_1.html)</a></li>
-<li><a href="https://lky020120.github.io/java/hw3_3_2.html">Ex_3 (hw3_3_2.html)</a></li>
-<li><a href="https://lky020120.github.io/java/hw3_3_3.html">Ex_4 (hw3_3_3.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw3_3_1.html">Ex1_2 (hw3_3_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw3_3_2.html">Ex1_3 (hw3_3_2.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw3_3_3.html">Ex1_4 (hw3_3_3.html)</a></li>
   </ol><hr/>
   <li> 3주 4회차 </li>
 <ol>
-<li><a href="https://lky020120.github.io/java/hw3_4_1.html">Ex_5 (hw3_4_1.html)</a></li>
-<li><a href="https://lky020120.github.io/java/hw3_4_2.html">Ex_6 (hw3_4_2.html)</a></li>
-<li><a href="https://lky020120.github.io/java/hw3_4_3.html">Ex_7 (hw3_4_3.html)</a></li>
-<li><a href="https://lky020120.github.io/java/hw3_4_4.html">Ex_8 (hw3_4_4.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw3_4_1.html">Ex1_5 (hw3_4_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw3_4_2.html">Ex1_6 (hw3_4_2.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw3_4_3.html">Ex1_7 (hw3_4_3.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw3_4_4.html">Ex1_8 (hw3_4_4.html)</a></li>
   </ol><hr/>
 </ul>
 </body></html>
