--- a/java/hw3_3_1.html
+++ b/java/hw3_3_1.html
@@ -1,4 +1,4 @@
-<!doctype html><!-- index.html -->
+<!doctype html><!-- hw3_3_1.html -->
 <html><head>
   <meta charset="utf-8"/><meta name="viewport"content="width=device-width,initial-scale=1"/>
   <style>[class*="col-"]{float:left;padding:10px}/*for mobile*/
@@ -7,7 +7,7 @@
       .col-5{width:41.66%;}.col-6{width:50%;}.col-7{width:58.33%;}.col-8{width:66.66%;}
       .col-9{width:75%;}.col-10{width:83.33%;}.col-11{width:91.66%;}.col-12{width:100%;}}</style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery3.1.1/jquery.min.js"></script>
-  <title>Ex1_1</title></head>
+  <title>Ex1_2</title></head>
   <body><header></header>
     <section>
       <h4>이름</h4><p>소스코드</p>
