--- a/java/hw1.html
+++ b/java/hw1.html
@@ -36,5 +36,13 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <li><a href="https://lky020120.github.io/java/hw3_4_3.html">Ex1_7 (hw3_4_3.html)</a></li>
 <li><a href="https://lky020120.github.io/java/hw3_4_4.html">Ex1_8 (hw3_4_4.html)</a></li>
   </ol><hr/>
+  <li> 4주 1회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw4_1_1.html">Ex2_1 (hw4_1_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_1_2.html">divide1000 (hw4_1_2.html)</a></li>
+  </ol><hr/>
+  <li> 4주 2회차 </li>
+<li><a href="https://lky020120.github.io/java/hw4_2_1.html">Ex2_2 (hw4_2_1.html)</a></li>
+</ol><hr/>
 </ul>
 </body></html>
