--- a/java/hw1.html
+++ b/java/hw1.html
@@ -42,7 +42,8 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <li><a href="https://lky020120.github.io/java/hw4_1_2.html">divide1000 (hw4_1_2.html)</a></li>
   </ol><hr/>
   <li> 4주 2회차 </li>
-<li><a href="https://lky020120.github.io/java/hw4_2_1.html">Ex2_2 (hw4_2_1.html)</a></li>
+<ol>
+<li><a href=https://lky020120.github.io/java/hw4_2_1.html>Eclipse 초기 실행(hw4_2_1.html)</a></li>
 </ol><hr/>
 </ul>
 </body></html>
