--- a/java/hw1.html
+++ b/java/hw1.html
@@ -43,7 +43,7 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   </ol><hr/>
   <li> 4주 2회차 </li>
 <ol>
-<li><a href=https://lky020120.github.io/java/hw4_2_1.html>Eclipse 초기 실행(hw4_2_1.html)</a></li>
+<li><a href=https://lky020120.github.io/java/hw4_2_1.html>Ex2_2(hw4_2_1.html)</a></li>
 </ol><hr/>
 </ul>
 </body></html>
