--- a/java/hw1.html
+++ b/java/hw1.html
@@ -45,5 +45,23 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <ol>
 <li><a href=https://lky020120.github.io/java/hw4_2_1.html>Ex2_2(hw4_2_1.html)</a></li>
 </ol><hr/>
+  <li> 4주 3회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw4_3_1.html">hw4_3_1 (hw4_3_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_3_2.html">hw4_3_2 (hw4_3_2.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_3_3.html">hw4_3_3 (hw4_3_3.html)</a></li>
+  </ol><hr/>
+   <li> 4주 4회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw4_4_1.html">hw4_4_1 (hw4_4_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_4_2.html">hw4_4_2 (hw4_4_2.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_4_3.html">hw4_4_3 (hw4_4_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw4_4_4.html">hw4_4_4 (hw4_4_4.html)</a></li>
+  </ol><hr/>
+   <li> 5주 2회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw6_1.html">hw6_1 (hw6_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw6_2.html">hw6_2 (hw6_2.html)</a></li>
+  </ol><hr/>
 </ul>
 </body></html>
