--- a/java/hw1.html
+++ b/java/hw1.html
@@ -39,7 +39,8 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   <li> 4주 1회차 </li>
 <ol>
 <li><a href="https://lky020120.github.io/java/hw4_1_1.html">Ex2_1 (hw4_1_1.html)</a></li>
-<li><a href="https://lky020120.github.io/java/hw4_1_2.html">divide1000 (hw4_1_2.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_1_3.html">연산자(2) (hw4_1_3.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_1_2.html">1000을 분과 초로 만들기 (hw4_1_2.html)</a></li>
   </ol><hr/>
   <li> 4주 2회차 </li>
 <ol>
@@ -47,9 +48,9 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 </ol><hr/>
   <li> 4주 3회차 </li>
 <ol>
-<li><a href="https://lky020120.github.io/java/hw4_3_1.html">hw4_3_1 (hw4_3_1.html)</a></li>
-<li><a href="https://lky020120.github.io/java/hw4_3_2.html">hw4_3_2 (hw4_3_2.html)</a></li>
-<li><a href="https://lky020120.github.io/java/hw4_3_3.html">hw4_3_3 (hw4_3_3.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_3_1.html">과제1-증감연산자 값 구하기 (hw4_3_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_3_2.html">과제1-나머지 구하기 (hw4_3_2.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw4_3_3.html">과제2-boolean변수를 이용한 논리식 (hw4_3_3.html)</a></li>
   </ol><hr/>
    <li> 4주 4회차 </li>
 <ol>
