--- a/java/hw4_4_2.html
+++ b/java/hw4_4_2.html
@@ -7,17 +7,17 @@
       .col-5{width:41.66%;}.col-6{width:50%;}.col-7{width:58.33%;}.col-8{width:66.66%;}
       .col-9{width:75%;}.col-10{width:83.33%;}.col-11{width:91.66%;}.col-12{width:100%;}}</style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery3.1.1/jquery.min.js"></script>
-  <title>Exhw4_4_2</title></head>
+  <title>hw4_4_2</title></head>
   <body><header></header>
     <section>
       <h4>이름</h4><p>소스코드</p>
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/135210051-711e47fc-777c-478a-be80-381cf05c5e33.png"/>
-        <img src="https://user-images.githubusercontent.com/89887207/135210054-6526c0ce-95ca-48b3-a01f-81f2ea986a5d.pn"alt="소스코드"style="width:auto;"/>
+        <img src="https://user-images.githubusercontent.com/89887207/135210054-6526c0ce-95ca-48b3-a01f-81f2ea986a5d.png"alt="소스코드"style="width:auto;"/>
         </picture>        
       <p>결과화면</p>
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/135210051-711e47fc-777c-478a-be80-381cf05c5e33.png"/>
-        <img src="https://user-images.githubusercontent.com/89887207/135210054-6526c0ce-95ca-48b3-a01f-81f2ea986a5d.pn"alt="결과화면"style="width:auto;"/>
+        <img src="https://user-images.githubusercontent.com/89887207/135210054-6526c0ce-95ca-48b3-a01f-81f2ea986a5d.png"alt="결과화면"style="width:auto;"/>
         </picture>                                                                                                                                                                                                                                                                         
     </section></body></html>
