--- a/java/hw1.html
+++ b/java/hw1.html
@@ -59,10 +59,32 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <li><a href="https://lky020120.github.io/java/hw4_4_3.html">hw4_4_3 (hw4_4_3.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw4_4_4.html">hw4_4_4 (hw4_4_4.html)</a></li>
   </ol><hr/>
-   <li> 5주 2회차 </li>
+  <li> 5주 2회차 </li>
 <ol>
 <li><a href="https://lky020120.github.io/java/hw6_1.html">hw6_1 (hw6_1.html)</a></li>
 <li><a href="https://lky020120.github.io/java/hw6_2.html">hw6_2 (hw6_2.html)</a></li>
+  </ol><hr/>
+   <li> 5주 3회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw5_3_1.html">hw5_3_1 (hw5_3_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw5_3_2.html">hw5_3_2 (hw5_3_2.html)</a></li>
+  </ol><hr/>
+  <li> 5주 4회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw5_4_1.html">hw5_4_1 (hw5_4_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw5_4_2.html">hw5_4_2 (hw5_4_2.html)</a></li>
+  </ol><hr/>
+  <li> 6주 1회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw6_1_1.html">hw6_1_1 (hw6_1_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw6_1_2.html">hw6_1_2 (hw6_1_2.html)</a></li>
+  </ol><hr/>
+  <li> 6주 2회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw6_2_1.html">hw6_2_1 (hw6_2_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw6_2_2.html">hw6_2_2 (hw6_2_2.html)</a></li>
+ <li><a href="https://lky020120.github.io/java/hw6_2_3.html">hw6_2_3 (hw6_2_3.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw6_2_4.html">hw6_2_4 (hw6_2_4.html)</a></li>
   </ol><hr/>
 </ul>
 </body></html>
