--- a/java/hw1.html
+++ b/java/hw1.html
@@ -85,5 +85,13 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <li><a href="https://lky020120.github.io/java/hw6_2_2.html">hw6_2_2 (hw6_2_2.html)</a></li>
  <li><a href="https://lky020120.github.io/java/hw6_2_3.html">hw6_2_3 (hw6_2_3.html)</a></li>
   </ol><hr/>
+   <li> 6주 3회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw6_3_1.html">hw6_3_1 (hw6_3_1.html)</a></li>
+  </ol><hr/>
+   <li> 6주 4회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw6_4_1.html">hw6_4_1 (hw6_4_1.html)</a></li>
+  </ol><hr/>
 </ul>
 </body></html>
