--- a/java/hw1.html
+++ b/java/hw1.html
@@ -93,5 +93,30 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <ol>
 <li><a href="https://lky020120.github.io/java/hw6_4_1.html">hw6_4_1 (hw6_4_1.html)</a></li>
   </ol><hr/>
+  <li> 7주 3회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw7_3_1.html">Ex7_0 (hw7_3_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw7_3_2.html">Ex7_1 (hw7_3_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw7_3_3.html">Ex7_2 (hw7_3_3.html)</a></li>
+  </ol><hr/>
+  <li> 7주 4회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw7_4_1.html">Ex7_12 (hw7_4_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw7_4_2.html">Ex7_11 (hw7_4_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw7_4_3.html">Ex7_3 (hw7_4_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw7_4_4.html">Ex7_4 (hw7_4_4.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw7_4_5.html">Ex7_6 (hw7_4_5.html)</a></li>
+  </ol><hr/>
+  <li> 9주 1회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw9_1_1.html">Ex6_5 (hw9_1_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw9_1_2.html">Ex6_6 (hw9_1_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw9_1_3.html">Ex7_5 (hw9_1_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw9_1_4.html">Ex7_6(2) (hw9_1_4.html)</a></li>
+  </ol><hr/>
+  <li> 9주 2회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw9_2_1.html">Ex7_9 (hw9_2_1.html)</a></li>
+  </ol><hr/>
 </ul>
 </body></html>
