--- a/java/hw1.html
+++ b/java/hw1.html
@@ -113,10 +113,41 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   <li><a href="https://lky020120.github.io/java/hw9_1_2.html">Ex6_6 (hw9_1_2.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw9_1_3.html">Ex7_5 (hw9_1_3.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw9_1_4.html">Ex7_6(2) (hw9_1_4.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw9_1_5.html">곱하기 (hw9_1_5.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw9_1_6.html">사각형 면적 (hw9_1_6.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw9_1_7.html">삼각형 면적 (hw9_1_7.html)</a></li>
   </ol><hr/>
   <li> 9주 2회차 </li>
 <ol>
 <li><a href="https://lky020120.github.io/java/hw9_2_1.html">Ex7_9 (hw9_2_1.html)</a></li>
   </ol><hr/>
+  <li> 9주 3회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw9_3_1.html">야옹이1[Ex8_9] (hw9_3_1.html)</a></li>
+  </ol><hr/>
+  <li> 9주 4회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw9_4_1.html">야옹이2[Ex8_10] (hw9_4_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw9_4_2.html">야옹이3[Ex8_11] (hw9_4_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw9_4_3.html">야옹이4[Ex8_7] (hw9_4_3.html)</a></li>
+  </ol><hr/>
+  <li> 10주 1회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw10_1_1.html">소나무[Ex8_12] (hw10_1_1.html)</a></li>
+  </ol><hr/>
+  <li> 10주 2회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw10_2_1.html">콜라녹차가격[Ex8_13] (hw10_2_1.html)</a></li>
+  </ol><hr/>
+  <li> 10주 3회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw10_3_1.html">보드카[Ex8_14] (hw10_3_1.html)</a></li>
+  </ol><hr/>
+   <li> 10주 4회차 </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw10_4_1.html">webcount함수[Ex8_15] (hw10_4_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw10_4_2.html">webcount2함수[ (hw10_4_2.html)</a></li>
+  </ol><hr/>
+  
 </ul>
 </body></html>
