--- a/java/hw1.html
+++ b/java/hw1.html
@@ -146,7 +146,10 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
    <li> 10주 4회차 </li>
 <ol>
 <li><a href="https://lky020120.github.io/java/hw10_4_1.html">webcount함수[Ex8_15] (hw10_4_1.html)</a></li>
-  <li><a href="https://lky020120.github.io/java/hw10_4_2.html">webcount2함수[ (hw10_4_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw10_4_2.html">webcount2함수[Ex8_16] (hw10_4_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw10_4_3.html">wallet[Ex8_19] (hw10_4_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw10_4_4.html">webcount3함수[Ex8_17] (hw10_4_4.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw10_4_5.html">스마트폰[Ex8_22] (hw10_4_5.html)</a></li>
   </ol><hr/>
   
 </ul>
