--- a/java/hw1.html
+++ b/java/hw1.html
@@ -141,7 +141,7 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   </ol><hr/>
   <li> 10주 3회차 </li>
 <ol>
-<li><a href="https://lky020120.github.io/java/hw10_3_1.html">보드카[Ex8_14] (hw10_3_1.html)</a></li>
+<li><a href="https://lky020120.github.io/java/hw10_3_1.html">상속[Ex8_14] (hw10_3_1.html)</a></li>
   </ol><hr/>
    <li> 10주 4회차 </li>
 <ol>
