--- a/java/hw1.html
+++ b/java/hw1.html
@@ -139,11 +139,11 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <ol>
 <li><a href="https://lky020120.github.io/java/hw10_2_1.html">상속[Ex8_13] (hw10_2_1.html)</a></li>
   </ol><hr/>
-  <li> 10주 3회차 </li>
+  <li> 10주 3회차(11/4) </li>
 <ol>
 <li><a href="https://lky020120.github.io/java/hw10_3_1.html">상속[Ex8_14] (hw10_3_1.html)</a></li>
   </ol><hr/>
-   <li> 10주 4회차 </li>
+   <li> 10주 4회차(11/4) </li>
 <ol>
 <li><a href="https://lky020120.github.io/java/hw10_4_1.html">상속[Ex8_15] (hw10_4_1.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw10_4_2.html">상속[Ex8_16] (hw10_4_2.html)</a></li>
@@ -151,6 +151,30 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   <li><a href="https://lky020120.github.io/java/hw10_4_4.html">상속[Ex8_17] (hw10_4_4.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw10_4_5.html">상속[Ex8_22] (hw10_4_5.html)</a></li>
   </ol><hr/>
-  
+  <li> 11주 1회차(11/10) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw11_1_1.html">인터페이스[Ex9_1] (hw11_1_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_1_2.html">인터페이스[Ex9_2] (hw11_1_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_1_3.html">인터페이스[Ex9_3] (hw11_1_3.html)</a></li>
+  </ol><hr/>
+  <li> 11주 2회차(11/10) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw11_2_1.html">인터페이스[Ex9_4] (hw11_2_1.html)</a></li>
+  </ol><hr/>
+  <li> 11주 3회차(11/10) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw11_3_1.html">예외처리[Ex10_1] (hw11_3_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_3_2.html">예외처리[Ex10_2] (hw11_3_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_3_3.html">예외처리[Ex10_3] (hw11_3_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_3_4.html">예외처리[Ex10_4] (hw11_3_4.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_3_5.html">예외처리[Ex10_5] (hw11_3_5.html)</a></li>
+  </ol><hr/>
+  <li> 11주 4회차(11/10) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw11_4_1.html">콜렉션과 제너릭[Ex12_1] (hw11_4_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_4_2.html">콜렉션과 제너릭[Ex12_2] (hw11_4_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_4_3.html">콜렉션과 제너릭[Ex12_3] (hw11_4_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_4_4.html">콜렉션과 제너릭[Ex12_4] (hw11_4_4.html)</a></li>
+  </ol><hr/>
 </ul>
 </body></html>
