--- a/java/hw11_2_1.html
+++ b/java/hw11_2_1.html
@@ -14,8 +14,12 @@
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/141264821-0fa31359-1682-4e9d-a64d-b297d39d3d90.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/141265392-956f5383-9342-4bda-ba0d-7e6caaccad77.png"alt="소스코드"style="width:auto;"/>
+        </picture>
+        <picture>
          <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/141265944-bab4338c-5196-4c7b-b37e-f18369932553.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/141265941-47a56ae2-db07-4a27-9c43-c85a97c8c123.png"alt="소스코드"style="width:auto;"/>
+          </picture>
+        <picture>
          <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/141266056-502e69af-e677-429b-b57d-b4b404c684f5.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/141266054-dba36b74-3c8f-4a34-b117-952d24b87f3a.png"alt="소스코드"style="width:auto;"/>
         </picture>        
