--- a/java/hw1.html
+++ b/java/hw1.html
@@ -168,6 +168,8 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   <li><a href="https://lky020120.github.io/java/hw11_3_3.html">예외처리[Ex10_3] (hw11_3_3.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw11_3_4.html">예외처리[Ex10_4] (hw11_3_4.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw11_3_5.html">예외처리[Ex10_5] (hw11_3_5.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_3_6.html">Ex10_4를 ArithmeticException예외로[과제] (hw11_3_6.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw11_3_7.html">Ex10_5를 ArithmeticException예외로[과제] (hw11_3_7.html)</a></li>
   </ol><hr/>
   <li> 11주 4회차(11/10) </li>
 <ol>
