--- a/java/hw1.html
+++ b/java/hw1.html
@@ -178,5 +178,22 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   <li><a href="https://lky020120.github.io/java/hw11_4_3.html">콜렉션과 제너릭[Ex12_3] (hw11_4_3.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw11_4_4.html">콜렉션과 제너릭[Ex12_4] (hw11_4_4.html)</a></li>
   </ol><hr/>
+  <li> 12주 1회차(11/16) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw12_1_1.html">스트림[Ex11_1] (hw12_1_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_1_2.html">스트림[Ex11_2] (hw12_1_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_1_3.html">스트림[Ex11_3] (hw12_1_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_1_4.html">스트림[Ex11_4] (hw12_1_4.html)</a></li>
+   <li><a href="https://lky020120.github.io/java/hw12_1_5.html">COMPUTER 출력[과제] (hw12_1_5.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_1_6.html">DAEJEON JOREA 출력[과제] (hw12_1_6.html)</a></li>
+  </ol><hr/>
+  <li> 12주 2회차(11/16) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw12_2_1.html">스트림(과제)[Ex11_5] (hw12_2_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_2_2.html">스트림(과제)[Ex11_6] (hw12_2_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_2_3.html">스트림(과제)[Ex11_7] (hw12_2_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_2_4.html">스트림(과제)[Ex11_8] (hw12_2_4.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_2_5.html">스트림(과제)[Ex11_9] (hw12_2_5.html)</a></li>
+  </ol><hr/>
 </ul>
 </body></html>
