--- a/java/hw12_2_4.html
+++ b/java/hw12_2_4.html
@@ -7,10 +7,10 @@
       .col-5{width:41.66%;}.col-6{width:50%;}.col-7{width:58.33%;}.col-8{width:66.66%;}
       .col-9{width:75%;}.col-10{width:83.33%;}.col-11{width:91.66%;}.col-12{width:100%;}}</style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery3.1.1/jquery.min.js"></script>
-  <title>스트림[Ex11_8]</title></head>
+  <title>스트림(과제)[Ex11_8]</title></head>
   <body><header></header>
     <section>
-      <h4>스트림[Ex11_8]</h4><p>소스코드</p>
+      <h4>스트림(과제)[Ex11_8]</h4><p>소스코드</p>
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/141991640-22f35e3f-7c5e-4555-8dbc-b8ecd3124b44.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/141991637-10de9200-1b18-42a3-8332-5208688357ed.png"alt="소스코드"style="width:auto;"/>
