--- a/java/hw1.html
+++ b/java/hw1.html
@@ -185,7 +185,7 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   <li><a href="https://lky020120.github.io/java/hw12_1_3.html">스트림[Ex11_3] (hw12_1_3.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw12_1_4.html">스트림[Ex11_4] (hw12_1_4.html)</a></li>
    <li><a href="https://lky020120.github.io/java/hw12_1_5.html">COMPUTER 출력[과제] (hw12_1_5.html)</a></li>
-  <li><a href="https://lky020120.github.io/java/hw12_1_6.html">DAEJEON JOREA 출력[과제] (hw12_1_6.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_1_6.html">DAEJEON OREA 출력[과제] (hw12_1_6.html)</a></li>
   </ol><hr/>
   <li> 12주 2회차(11/16) </li>
 <ol>
