--- a/java/hw12_1_6.html
+++ b/java/hw12_1_6.html
@@ -7,10 +7,10 @@
       .col-5{width:41.66%;}.col-6{width:50%;}.col-7{width:58.33%;}.col-8{width:66.66%;}
       .col-9{width:75%;}.col-10{width:83.33%;}.col-11{width:91.66%;}.col-12{width:100%;}}</style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery3.1.1/jquery.min.js"></script>
-  <title>DAEJEON JOREA 출력[과제]</title></head>
+  <title>DAEJEON KOREA 출력[과제]</title></head>
   <body><header></header>
     <section>
-      <h4>DAEJEON JOREA 출력[과제]</h4><p>소스코드</p>
+      <h4>DAEJEON KOREA 출력[과제]</h4><p>소스코드</p>
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/141990830-038372c8-88c3-4664-b7cf-a247fac36c57.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/141990823-0becc42e-d9ba-481f-9641-305e12ca2216.png"alt="소스코드"style="width:auto;"/>
