--- a/java/hw1.html
+++ b/java/hw1.html
@@ -195,5 +195,40 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   <li><a href="https://lky020120.github.io/java/hw12_2_4.html">스트림(과제)[Ex11_8] (hw12_2_4.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw12_2_5.html">스트림(과제)[Ex11_9] (hw12_2_5.html)</a></li>
   </ol><hr/>
+    <li> 12주 3회차(11/24) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw12_3_1.html">스트림[Ex11_10] (hw12_3_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_3_2.html">스트림[Ex11_11] (hw12_3_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_3_3.html">스트림[Ex11_12] (hw12_3_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_3_4.html">스트림[Ex11_13] (hw12_3_4.html)</a></li>
+   <li><a href="https://lky020120.github.io/java/hw12_3_5.html">스트림[Ex11_9] (hw12_3_5.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_3_6.html">스트림[BookMenu] (hw12_3_6.html)</a></li>
+  </ol><hr/>
+  <li> 12주 4회차(11/24) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw12_4_1.html">응용[Student.java] (hw12_4_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw12_4_2.html">응용[Book.java] (hw12_4_2.html)</a></li>
+  </ol><hr/>
+  <li> 13주 1회차(11/24) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw13_1_1.html">응용[BookStore.java] (hw13_1_1.html)</a></li>
+  <li> 13주 2회차(11/24) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw13_2_1.html">응용[MyStore.java] (hw13_2_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw13_2_2.html">응용[결과화면] (hw13_2_2.html)</a></li>
+  </ol><hr/>
+  <li> 13주 3회차(11/24) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw13_3_1.html">응용 수정본[Book.java] (hw13_3_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw13_3_2.html">응용 수정본[BookStore.java] (hw13_3_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw13_3_3.html">응용 수정본[MyStore.java] (hw13_3_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw13_3_4.html">응용 수정본[Student.java] (hw13_3_4.html)</a></li>
+   <li><a href="https://lky020120.github.io/java/hw13_3_5.html">응용 수정본[결과화면] (hw13_3_5.html)</a></li>
+  </ol><hr/>
+  <li> 13주 4회차(11/24) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw13_4_1.html">응용 메뉴추가[MyMenu.java] (hw13_4_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw13_4_2.html">응용 메뉴추가[결과화면] (hw13_4_2.html)</a></li>
+  </ol><hr/>
 </ul>
 </body></html>
