--- a/java/hw13_1_1.html
+++ b/java/hw13_1_1.html
@@ -18,7 +18,7 @@
         </picture>        
       <p>소스코드2</p>
       <picture>
-        <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/143405230-76ab543f-c522-44d1-aba8-165aa86ae9c6.png/>
+        <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/143405230-76ab543f-c522-44d1-aba8-165aa86ae9c6.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/143405230-76ab543f-c522-44d1-aba8-165aa86ae9c6.png"alt="소스코드2"style="width:auto;"/>
         </picture>
       <p>소스코드3</p>
