--- a/java/hw1.html
+++ b/java/hw1.html
@@ -231,5 +231,10 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <li><a href="https://lky020120.github.io/java/hw13_4_1.html">응용 메뉴추가[MyMenu.java] (hw13_4_1.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw13_4_2.html">응용 메뉴추가[결과화면] (hw13_4_2.html)</a></li>
   </ol><hr/>
+  <li> 14주 1회차(12/01) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw14_1_1.html">쓰레드[Ex14_1] (hw14_1_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_!_2.html">쓰레드[Ex14_1] (hw14_1_2.html)</a></li>
+  </ol><hr/>
 </ul>
 </body></html>
