--- a/java/hw1.html
+++ b/java/hw1.html
@@ -234,7 +234,17 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   <li> 14주 1회차(12/01) </li>
 <ol>
 <li><a href="https://lky020120.github.io/java/hw14_1_1.html">쓰레드[Ex14_1] (hw14_1_1.html)</a></li>
-  <li><a href="https://lky020120.github.io/java/hw14_!_2.html">쓰레드[Ex14_1] (hw14_1_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_1_2.html">쓰레드[Ex14_1] (hw14_1_2.html)</a></li>
+  </ol><hr/>
+   <li> 14주 2회차(12/01) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw14_2_1.html">쓰레드[Ex14_3] (hw14_2_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_2_2.html">쓰레드[Ex14_4] (hw14_2_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_2_3.html">쓰레드[Ex14_x] (hw14_2_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_2_4.html">쓰레드[Ex14_y] (hw14_2_4.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_2_5.html">쓰레드[Ex14_z] (hw14_2_5.html)</a></li> 
+  <li><a href="https://lky020120.github.io/java/hw14_2_6.html">쓰레드[Ex14_5] (hw14_2_6.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_2_7.html">쓰레드[Ex14_6] (hw14_2_7.html)</a></li>
   </ol><hr/>
 </ul>
 </body></html>
