--- a/java/hw1.html
+++ b/java/hw1.html
@@ -246,5 +246,18 @@ a:hover{text-decoration:underline;}a:active{color:red;text-decoration:none;}
   <li><a href="https://lky020120.github.io/java/hw14_2_6.html">쓰레드[Ex14_5] (hw14_2_6.html)</a></li>
   <li><a href="https://lky020120.github.io/java/hw14_2_7.html">쓰레드[Ex14_6] (hw14_2_7.html)</a></li>
   </ol><hr/>
+   <li> 14주 3회차(12/01) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw14_3_1.html">객체 프로그래밍[Ex7_11] (hw14_3_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_3_2.html">객체 프로그래밍[Ex13_1] (hw14_3_2.html)</a></li>
+  </ol><hr/>
+   <li> 14주 4회차(12/01) </li>
+<ol>
+<li><a href="https://lky020120.github.io/java/hw14_4_1.html">객체 프로그래밍[Ex13_2] (hw14_4_1.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_4_2.html">객체 프로그래밍[Ex13_3] (hw14_4_2.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_4_3.html">객체 프로그래밍[Ex13_4] (hw14_4_3.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_4_4.html">객체 프로그래밍[Ex13_5] (hw14_4_4.html)</a></li>
+  <li><a href="https://lky020120.github.io/java/hw14_4_5.html">객체 프로그래밍[Ex13_6] (hw14_4_5.html)</a></li>
+  </ol><hr/>
 </ul>
 </body></html>
