--- a/java/hw14_1_1.html
+++ b/java/hw14_1_1.html
@@ -14,6 +14,11 @@
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357905-a16a0fea-d765-46e6-91cf-f6c98aba321e.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/144357905-a16a0fea-d765-46e6-91cf-f6c98aba321e.png"alt="소스코드"style="width:auto;"/>
-        </picture>                                                                                                                                                                                                                                                                     
+        </picture> 
+       <p>결과화면</p>
+      <picture>
+        <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357905-a16a0fea-d765-46e6-91cf-f6c98aba321e.png"/>
+        <img src="https://user-images.githubusercontent.com/89887207/144357905-a16a0fea-d765-46e6-91cf-f6c98aba321e.png"alt="결과화면"style="width:auto;"/>
+        </picture>
     </section></body></html>
 © 2021 GitHub, Inc.
