--- a/java/hw14_1_2.html
+++ b/java/hw14_1_2.html
@@ -14,6 +14,11 @@
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357907-e883ed90-6a49-4ab8-8cb4-bb61dba986f7.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/144357907-e883ed90-6a49-4ab8-8cb4-bb61dba986f7.png"alt="소스코드"style="width:auto;"/>
-        </picture>                                                                                                                                                                                                                                                                     
+        </picture>       
+       <p>결과화면</p>
+      <picture>
+        <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357907-e883ed90-6a49-4ab8-8cb4-bb61dba986f7.png"/>
+        <img src="https://user-images.githubusercontent.com/89887207/144357907-e883ed90-6a49-4ab8-8cb4-bb61dba986f7.png"alt="결과화면"style="width:auto;"/>
+        </picture>
     </section></body></html>
 © 2021 GitHub, Inc.
