--- a/java/hw14_2_3.html
+++ b/java/hw14_2_3.html
@@ -14,6 +14,11 @@
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357914-053a2ccd-baf6-4a72-a5c1-6650cdb73639.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/144357914-053a2ccd-baf6-4a72-a5c1-6650cdb73639.png"alt="소스코드"style="width:auto;"/>
-        </picture>                                                                                                                                                                                                                                                                     
+        </picture>                    
+       <p>결과화면</p>
+      <picture>
+        <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357914-053a2ccd-baf6-4a72-a5c1-6650cdb73639.png"/>
+        <img src="https://user-images.githubusercontent.com/89887207/144357914-053a2ccd-baf6-4a72-a5c1-6650cdb73639.png"alt="결과화면"style="width:auto;"/>
+        </picture>
     </section></body></html>
 © 2021 GitHub, Inc.
