--- a/java/hw14_2_4.html
+++ b/java/hw14_2_4.html
@@ -14,6 +14,11 @@
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357915-3a5b13d5-f780-442e-86e4-292b9d8b9ce6.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/144357915-3a5b13d5-f780-442e-86e4-292b9d8b9ce6.png"alt="소스코드"style="width:auto;"/>
-        </picture>                                                                                                                                                                                                                                                                     
+        </picture>
+       <p>결과화면</p>
+      <picture>
+        <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357915-3a5b13d5-f780-442e-86e4-292b9d8b9ce6.png"/>
+        <img src="https://user-images.githubusercontent.com/89887207/144357915-3a5b13d5-f780-442e-86e4-292b9d8b9ce6.png"alt="결과화면"style="width:auto;"/>
+        </picture>
     </section></body></html>
 © 2021 GitHub, Inc.
