--- a/java/hw14_2_5.html
+++ b/java/hw14_2_5.html
@@ -14,6 +14,11 @@
       <picture>
         <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357917-1194f81b-6cde-41bb-a55b-e65e83f4beec.png"/>
         <img src="https://user-images.githubusercontent.com/89887207/144357917-1194f81b-6cde-41bb-a55b-e65e83f4beec.png"alt="소스코드"style="width:auto;"/>
-        </picture>                                                                                                                                                                                                                                                                     
+        </picture>          
+       <p>결과화면</p>
+      <picture>
+        <source media="(min-width:768px)"srcset="https://user-images.githubusercontent.com/89887207/144357917-1194f81b-6cde-41bb-a55b-e65e83f4beec.png"/>
+        <img src="https://user-images.githubusercontent.com/89887207/144357917-1194f81b-6cde-41bb-a55b-e65e83f4beec.png"alt="결과화면"style="width:auto;"/>
+        </picture>
     </section></body></html>
 © 2021 GitHub, Inc.
